<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="360dp"
    android:layout_height="300dp"
	android:layout_marginTop="10dp"
	android:background="@drawable/lineframe"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1">
        
        <ImageView 
            android:id="@+id/momentPic_imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/input_picture"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
            android:background="@drawable/lineframe_dash"
            />
   
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/momentPic_imageView"
            android:orientation="vertical">
        
			<TextView 
			    android:id="@+id/staticMomentWhen_textView"
			    android:layout_width="match_parent"
			    android:layout_height="17dp"
			    android:textStyle="bold|italic"
			    android:text="@string/static_when"
			    android:textSize="12sp"
			    android:textColor="#000000"
			    style="?android:listSeparatorTextViewStyle" />
			
			<TextView 
			    android:id="@+id/momentWhen_textView"
			    android:layout_width="match_parent"
			    android:layout_height="19dp"
			    android:textStyle="bold"
			    android:layout_marginLeft="16dp"
			    android:layout_marginRight="16dp"
			    android:textColor="#000000"
			    style="?android:listSeparatorTextViewStyle"/>
			<TextView 
			    android:id="@+id/staticMomentWhere_textView"
			    android:layout_width="match_parent"
			    android:layout_height="17dp"
			    android:textStyle="bold|italic"
			    android:text="@string/static_where"
			    android:textSize="12sp"
			    android:textColor="#000000"
			    android:layout_marginTop="10dp"
			    style="?android:listSeparatorTextViewStyle"
		    />
			<TextView 
			    android:id="@+id/momentWhere_textView"
			    android:layout_width="match_parent"
			    android:layout_height="19dp"
			    android:textStyle="bold"
			    android:layout_marginLeft="16dp"
			    android:layout_marginRight="16dp"
			    android:textColor="#000000"
			    style="?android:listSeparatorTextViewStyle"
		    />
			<TextView 
			     android:id="@+id/staticMomentTag_textView"
			    android:layout_width="match_parent"
			    android:layout_height="17dp"
			    android:textStyle="bold|italic"
			    android:text="@string/static_tag"
			    android:textSize="12sp"
			    android:textColor="#006666"
			    android:layout_marginTop="10dp"
			    style="?android:listSeparatorTextViewStyle"
		    />
			<EditText  
			    android:id="@+id/momentTag_textView"
			    android:layout_width="match_parent"
			    android:layout_height="19dp"
			    android:textStyle="bold"
			    android:layout_marginLeft="16dp"
			    android:layout_marginRight="16dp"
			    android:textColor="#007777"
			    android:maxLength="7"
			    android:hint="@string/input_tag"
	    		android:inputType="text"
			    style="?android:listSeparatorTextViewStyle"
		    />
		</LinearLayout>
		
	</RelativeLayout>
	
	<EditText 
	    android:id="@+id/momentContent_textView"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:textColor="#00b0e4"
	    android:background="@drawable/lineframe2"
	    android:layout_marginTop="10dp"
	    android:hint="@string/input_content"
	    android:inputType="text|textMultiLine"
	    android:layout_marginLeft="12dp"
	    android:layout_marginRight="12dp"
	    android:minLines="1"
	    android:maxLines="3"
	    android:maxLength="64"
	    android:layout_weight="1"
    />
	
	<Button
	    android:id="@+id/momentSave_button"
	    android:layout_width="wrap_content"
	    android:layout_height="36dp"
	    android:layout_marginTop="10dp"
	    android:text="@string/save"
	    android:textStyle="bold"
	    style="?android:attr/buttonBarButtonStyle"
	    android:layout_gravity="center"/>
    
</LinearLayout>
